# support-ai-cli

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  implementation_steps.md  mcp-servers.json  package.json
data-pipeline/: Dockerfile  README.md  embedding_server.py  excluded_page_refs.conf.example  excluded_page_refs.txt  pyproject.toml
data-pipeline/indexer/: build_index.py  build_schema_index.py  clean_articles.py  filter_empty_articles.py  notion_schema_explorer.py  scrape_mcp_schemas.py  scrape_notion.py  translate_articles.py
data-pipeline/indexer/shared/: logger.py  mcp_client.py  opensearch_helpers.py
data-pipeline/requests/: opensearch-kyc-kb.http  opensearch-kyc-tools.http
docs/: search.md
scripts/: mcp-init.ts
src/: config.ts  index.ts  ui.ts
src/services/: bedrock.ts  linear.ts  mcp.ts  mcp_config.ts  mcp_next_gen.ts  opensearch.ts
src/utils/: debug.ts  pii.ts  prompt.ts
